# lnchannels

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  postgres.sql  requirements.txt  rollup.config.js
client/: API.html  Alias.html  App.html  Channel.html  Docs.html  Index.html  Loader.html  Node.html  NodeAlias.html  NotFound.html  d3.js  helpers.js  main.js
client/charts/: Bubbles.html  CloseTypes.html  HomeChart.html  NodeHistory.html
getdata/: __init__.py  __main__.py  chain_analysis.py  checkcloses.py  closuretype.py  enrich.py  globals.py  inspectblocks.py  listchannels.py  listnodes.py  materialize.py  onchain.py  schema.py  unknownclosetypes.py  utils.py
postgres/: functions.sql  schema.sql
src/: main.rs
static/: app.js  charts.js  index.html  style.css  tables.js
templates/: base.html  base.html.tera  channel.html  channel.html.tera  index.html.tera  node.html  node.html.tera
