[package]
name = "lnchannels"
version = "0.1.0"
authors = ["fiatjaf <fiatjaf@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.1"
reqwest = "0.9.17"
serde_json = "1.0"
serde = "1.0.91"
error-chain = "0.12.1"
jsonrpc = "0.11.0"

[dependencies.rusqlite]
version = "0.18.0"
features = ["bundled"]
